--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "conpyguration"
-version = "0.1.0a0"
+version = "0.1.0"
 description = "configure your python class"
 authors = [
     {name = "ZeroAct",email = "lhj5682@naver.com"}
