--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           pip install poetry
-          poetry install
+          python -m poetry install
           pip install pytest pytest-xdist
         shell: bash
 
