--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           pip install poetry
+          poetry config virtualenvs.create false
           python -m poetry install
           pip install pytest pytest-xdist
         shell: bash
